--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 
-input[type='text'],input[type='password'],input[type='email'] {
-    @apply w-full border my-1 py-2 rounded-2xl text-center
+input[type='text'],input[type='password'],input[type='email'],textarea {
+    @apply w-full border my-1 py-2 rounded-md p-2
 }
 
 button{
